# vibing-viz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  push_to_github.sh  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  requirements.txt
docs/getting-started/: installation.md
examples/: basic_visualization.py  camera_and_overlay_demo.py  environment_demo.py  full_demo.py  test_camera_system.py  test_environment.py  test_qt_ui.py  test_ui_components.py  video_export_demo.py
scripts/: setup_dev.sh
tests/: __init__.py  conftest.py
tests/unit/: test_pose_data.py  test_visualizer.py
vibing_viz/: __init__.py  __version__.py
vibing_viz/analysis/: __init__.py
vibing_viz/core/: __init__.py  camera.py  pose_data.py  skeleton.py  track.py  transforms.py
vibing_viz/io/: __init__.py  video_exporter.py
vibing_viz/ui/: main_window.py
vibing_viz/ui/menus/: __init__.py
vibing_viz/ui/panels/: __init__.py  properties_panel.py  scene_panel.py  tracks_panel.py
vibing_viz/ui/widgets/: __init__.py  timeline_widget.py  viewport_widget.py
vibing_viz/utils/: colors.py
vibing_viz/visualization/: __init__.py  camera_manager.py  scene_manager.py  video_overlay.py  visualizer.py
vibing_viz/visualization/export/: __init__.py
vibing_viz/visualization/renderers/: __init__.py  environment_renderer.py  polygon_renderer.py  pose_renderer.py
