[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibing-viz"
version = "0.1.0"
description = "3D visualization for pose tracking kinematics"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Talmo Pereira", email = "talmo@salk.edu"},
]
maintainers = [
    {name = "Talmo Pereira", email = "talmo@salk.edu"},
]
keywords = ["pose tracking", "3d visualization", "kinematics", "pygfx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pygfx>=0.5.0",
    "pylinalg>=0.4.0",
    "PyQt5>=5.15.0",
    "sleap-io>=0.1.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "twine>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-autorefs>=0.5.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/talmo/vibing-viz"
Documentation = "https://vibing-viz.readthedocs.io"
Repository = "https://github.com/talmo/vibing-viz"
Issues = "https://github.com/talmo/vibing-viz/issues"

[tool.hatch.build.targets.wheel]
packages = ["vibing_viz"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "N",  # pep8-naming
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = ["D"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-v",
    "--cov=vibing_viz",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-n=auto",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["vibing_viz"]
omit = ["*/tests/*", "*/examples/*"]